# propagation

./: .gitignore  README.md  environment-dev.yml  environment-prod.yml  environment.yml  live.py  longrun.py  mpi.pbs  mpi.py  optimize.py  parallel.py  parse_logfiles.ipynb  parse_logfiles.py  propagation.py  pyproject.toml  qsub.py  read.py  rescue_runs.ipynb  rescued_runs.csv  run.py  setup.txt  simulation.ipynb  simulation.py  slurm.sh  tree.py
.github/workflows/: tests.yml
blueprints/: blueprint.yaml  eagle_inputs.yaml  inputs-def.yaml  trainingcluster_inputs.yaml
blueprints/blueprint/: blueprint.yaml
blueprints/blueprint/scripts/: install.sh
blueprints/eagle/: local_inputs.yaml
blueprints/eagle/blueprint/: blueprint.yaml  inputs-def.yaml
blueprints/eagle/blueprint/scripts/: install.sh
blueprints/local_inputs/: eagle_inputs.yaml  trainingcluster_inputs.yaml
blueprints/scripts/: install.sh
blueprints/trainingcluster/: local_inputs.yaml
blueprints/trainingcluster/blueprint/: blueprint.yaml  inputs-def.yaml
blueprints/trainingcluster/blueprint/scripts/: install.sh
cloudify/: eagle_inputs.yaml  inputs.yaml  learn.sh  local_inputs.yaml  sim.sh  trainingcluster_inputs.yaml
cloudify/blueprint/: SNA_blueprint.yaml  blueprint.yaml  inputs-def.yaml
cloudify/blueprint/scripts/: install.sh  learn.sh  learn2.sh  loadlearn.sh  pre_configuring.sh  sim.sh
data/: anon_graph_inner_neos_20201110.metis  sim_features_neos_20200311.csv  sim_features_neos_20201110.csv
hpc/: experiments.py  hawk.pbs  sub.py  supermuc.sh  training.sh
optimization/: __init__.py  bayesian.py  findroot.py  localsearch.py  monotone.py  searchspace.py  wrap.py
propagation/: commands.py  live.py  localsearch.py  logfiles.py  longrun.py  mpi.pbs  mpi.py  optimize.py  parallel.py  propagation.py  qsub.py  read.py  run.py  simulation.py  spack.pbs  sub.py  tree.py
scripts/: learn.sh  sim.sh
scripts/eagle/: learn.sh  sim.sh
scripts/trainingcluster/: learn.sh  sim.sh
snsim/: __init__.py
snsim/hpc/: hawk.pbs  local.sh  mach2.pbs  sub.py  supermuc.sh  training.sh
snsim/optimization/: __init__.py  collections.py  findroot.py  monotone.py  searchspace.py  wrap.py
snsim/propagation/: commands.py  live.py  logfiles.py  longrun.py  mpi.py  optimize.py  parallel.py  propagation.py  read.py  run.py  simulation.py  tree.py
tests/: conftest.py  env-py36-mpich.yml  env-py36-openmpi.yml  env-py37-mpich.yml  env-py37-openmpi.yml  env-py38-mpich.yml  env-py38-openmpi.yml  env-py39-mpich.yml  env-py39-openmpi.yml  test_propagation.py
trees/: draw.py  drawtree.py  tree_analysis.ipynb  visualization.ipynb
